# pyproject.toml file specified at the root of the directory

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iwopy"
version = "0.3.2"
authors = [
  {name = "Jonas Schulte"},
  {name = "Bernhard Stoevesandt"},
]
maintainers = [
  {name = "Jonas Schulte"}
]
description = "Fraunhofer IWES optimization tools in Python"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["Optimization", "Interface"]
classifiers = [
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "scipy>=1.12",
]

[project.optional-dependencies]
opt = [
    "pygmo>=0.1",
    "pymoo>=0.6"
]
test = [
    "pytest>=7.0",
    "nbmake>1.0",
    "pygmo>=0.1",
    "pymoo>=0.6",
]
doc = [
    "setuptools>=61.0",
    "sphinx>=5.0",
    "sphinx-immaterial>=0.10",
    "myst-nb>=0.1",
    "ipykernel>=5.0",
    "ipywidgets>=5.0",
    "m2r2>=0.2",
    "lxml_html_clean>=0.4",
]
dev = [
    "pre-commit>=0.1",
    "objsize>=0.5",
    "jupyter>=1.0",
]

[project.urls]
Homepage = "https://github.com/FraunhoferIWES/iwopy"
Documentation = "https://fraunhoferiwes.github.io/iwopy.docs/index.html"
Repository = "https://github.com/FraunhoferIWES/iwopy.git"
"Bug Tracker" = "https://github.com/FraunhoferIWES/iwopy/issues"
Changelog = "https://github.com/FraunhoferIWES/iwopy/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
exclude = ["notebooks", "examples", "tests", "docs"]
