[metadata]
name         = iwopy 
version      = file: iwopy/VERSION
author       = Fraunhofer IWES
author_email = jonas.schmidt@iwes.fraunhofer.de
description  = Fraunhofer IWES optimization tools in Python
keywords     = Optimization, Interface
license      = MIT

long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/FraunhoferIWES/iwopy
project_urls =
    Source Code = https://github.com/FraunhoferIWES/iwopy
    Bug Tracker = https://github.com/FraunhoferIWES/iwopy/issues
    Documentation = https://fraunhoferiwes.github.io/iwopy.docs/index.html

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha

[options]
zip_safe = True
include_package_data = True
package_dir =
packages = 
    iwopy
python_requires = 
    >=3.7

install_requires =
    numpy
    scipy
    matplotlib

[options.extras_require]
test =
    flake8
    pytest
doc = 
    sphinx 
    sphinx_rtd_theme
    sphinxcontrib-email
    nbsphinx
    ipykernel
    m2r2

scripts =
